--- a/reviews.html
+++ b/reviews.html
@@ -117,6 +117,7 @@
             text-align: center;
             padding: 15px;
             margin-top: 40px;
+            width: 100%;
         }
     </style>
 </head>
@@ -139,7 +140,7 @@
         <div class="event">
             <h3>First Fly Hackathon 2025</h3>
             <p>Our very first hackathon, focused on innovative solutions for the future of flight.</p>
-            <button onclick="window.location.href='https://firstflyhackathon.com'">Add Review</button>
+            <button onclick="window.location.href='hackathon.html'">Add Review</button>
         </div>
         <div class="event">
             <h3>AI & ML Conference</h3>
