--- a/hackathon.html
+++ b/hackathon.html
@@ -160,7 +160,7 @@
 
     <main>
         <h2>Add a Review</h2>
-        <form class="review-form">
+        <form class="review-form" id="reviewForm">
 
             <div class="team-section">
                 <h3>SMART BUS</h3>
@@ -446,41 +446,75 @@
         <p>&copy; 2025 First Fly | <a href="https://firstfly.com" style="color:#66FCF1; text-decoration:none;">Visit Our Website</a></p>
     </footer>
     <script>
-        document.querySelector(".review-form").addEventListener("submit", async function (e) {
-    e.preventDefault();
+        document.querySelector("#reviewForm").addEventListener("submit", async function (e) {
+            e.preventDefault();
 
-    const formData = new FormData(this);
-    const data = {
-        fields: {
-            "Team Name": formData.get("team1-name"),
-            "Design": formData.get("team1-design"),
-            "Presentation": formData.get("team1-presentation"),
-            "Critical Thinking": formData.get("team1-critical-thinking"),
-            "Test 1": formData.get("team1-test1"),
-            "Test 2": formData.get("team1-test2")
-        }
-    };
+            const formData = new FormData(this);
+            const data = {
+                fields: {
+                    "Team Name": formData.get("team1-name"),
+                    "Design": formData.get("team1-design"),
+                    "Presentation": formData.get("team1-presentation"),
+                    "Critical Thinking": formData.get("team1-critical-thinking"),
+                    "Test 1": formData.get("team1-test1"),
+                    "Test 2": formData.get("team1-test2"),
+                    "Team Name 2": formData.get("team2-name"),
+                    "Design 2": formData.get("team2-design"),
+                    "Presentation 2": formData.get("team2-presentation"),
+                    "Critical Thinking 2": formData.get("team2-critical-thinking"),
+                    "Test 1 Team 2": formData.get("team2-test1"),
+                    "Test 2 Team 2": formData.get("team2-test2"),
+                    "Team Name 3": formData.get("team3-name"),
+                    "Design 3": formData.get("team3-design"),
+                    "Presentation 3": formData.get("team3-presentation"),
+                    "Critical Thinking 3": formData.get("team3-critical-thinking"),
+                    "Test 1 Team 3": formData.get("team3-test1"),
+                    "Test 2 Team 3": formData.get("team3-test2"),
+                    "Team Name 4": formData.get("team4-name"),
+                    "Design 4": formData.get("team4-design"),
+                    "Presentation 4": formData.get("team4-presentation"),
+                    "Critical Thinking 4": formData.get("team4-critical-thinking"),
+                    "Test 1 Team 4": formData.get("team4-test1"),
+                    "Test 2 Team 4": formData.get("team4-test2"),
+                    "Team Name 5": formData.get("team5-name"),
+                    "Design 5": formData.get("team5-design"),
+                    "Presentation 5": formData.get("team5-presentation"),
+                    "Critical Thinking 5": formData.get("team5-critical-thinking"),
+                    "Test 1 Team 5": formData.get("team5-test1"),
+                    "Test 2 Team 5": formData.get("team5-test2"),
+                    "Team Name 6": formData.get("team6-name"),
+                    "Design 6": formData.get("team6-design"),
+                    "Presentation 6": formData.get("team6-presentation"),
+                    "Critical Thinking 6": formData.get("team6-critical-thinking"),
+                    "Test 1 Team 6": formData.get("team6-test1"),
+                    "Test 2 Team 6": formData.get("team6-test2"),
+                }
+            };
 
-    const API_URL = "https://api.airtable.com/v0/apphIRpiGiAxAqmOZ/reviews/";
-    const API_KEY = "pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0"; 
+            //  Replace with your actual Airtable URL.  
+            //  It should look like:  https://api.airtable.com/v0/YOUR_BASE_ID/YOUR_TABLE_NAME
+            const API_URL = "https://api.airtable.com/v0/apphIRpiGiAxAqmOZ/tblEDfXQZmphNc7c3/";  //  <---------------------- CORRECTED LINE
 
-    const response = await fetch(API_URL, {
-        method: "POST",
-        headers: {
-            "Authorization": `Bearer ${API_KEY}`,
-            "Content-Type": "application/json"
-        },
-        body: JSON.stringify(data)
-    });
+            //  Replace with your actual Airtable API key.  It looks like: keyXXXXXXXXXXXXXXXXXXXX
+            const API_KEY = "pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0";  // <---------------------- REPLACE THIS LINE
 
-    if (response.ok) {
-        alert("Review submitted successfully!");
-        this.reset();
-    } else {
-        alert("Error submitting review.");
-    }
-});
+            const response = await fetch(API_URL, {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${API_KEY}`,
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify(data)
+            });
 
+            if (response.ok) {
+                alert("Review submitted successfully!");
+                this.reset();
+            } else {
+                const errorText = await response.text();
+                alert(`Error submitting review: ${response.status} - ${errorText}`);
+            }
+        });
     </script>
 </body>
 </html>
