--- a/hackathon.html
+++ b/hackathon.html
@@ -190,15 +190,15 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team1-test1">Test 1:</label>
-                <select id="team1-test1" name="team1-test1" required>
+                <label for="team1-problem-solving">Problem Solving:</label>
+                <select id="team1-problem-solving" name="team1-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
                     <option value="3">3 Stars</option>
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team1-test2">Test 2:</label>
+                <label for="team1-overall">Overall:</label>
                 <select id="team1-test2" name="team1-test2" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -209,10 +209,8 @@
             </div>
 
             <div class="team-section">
-                <h3>AUTO</h3>
-                <label for="team2-name">Team Name:</label>
-                <input type="text" id="team2-name" name="team2-name" value="AUTO" required readonly>
-                <label for="team2-design">Design:</label>
+                <h3>TUK TUK</h3>  <label for="team2-name">Team Name:</label>
+                <input type="text" id="team2-name" name="team2-name" value="TUK TUK" required readonly>  <label for="team2-design">Design:</label>
                 <select id="team2-design" name="team2-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -236,7 +234,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team2-test1">Test 1:</label>
+                <label for="team2-test1">Problem Solving:</label>
                 <select id="team2-test1" name="team2-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -244,7 +242,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team2-test2">Test 2:</label>
+                <label for="team2-overall">Overall:</label>
                 <select id="team2-test2" name="team2-test2" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -255,10 +253,8 @@
             </div>
 
             <div class="team-section">
-                <h3>RECIPE</h3>
-                <label for="team3-name">Team Name:</label>
-                <input type="text" id="team3-name" name="team3-name" value="RECIPE" required readonly>
-                <label for="team3-design">Design:</label>
+                <h3>RECIPE</h3>  <label for="team3-name">Team Name:</label>
+                <input type="text" id="team3-name" name="team3-name" value="RECIPE" required readonly>  <label for="team3-design">Design:</label>
                 <select id="team3-design" name="team3-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -282,7 +278,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team3-test1">Test 1:</label>
+                <label for="team3-test1">Problem Solving:</label>
                 <select id="team3-test1" name="team3-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -290,7 +286,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team3-test2">Test 2:</label>
+                <label for="team3-overall">Overall:</label>
                 <select id="team3-test2" name="team3-test2" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -301,10 +297,8 @@
             </div>
 
             <div class="team-section">
-                <h3>HOSPITAL</h3>
-                <label for="team4-name">Team Name:</label>
-                <input type="text" id="team4-name" name="team4-name" value="HOSPITAL" required readonly>
-                <label for="team4-design">Design:</label>
+                <h3>OP TICKET</h3>  <label for="team4-name">Team Name:</label>
+                <input type="text" id="team4-name" name="team4-name" value="OP TICKET" required readonly>  <label for="team4-design">Design:</label>
                 <select id="team4-design" name="team4-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -328,7 +322,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team4-test1">Test 1:</label>
+                <label for="team4-test1">Problem Solving:</label>
                 <select id="team4-test1" name="team4-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -336,7 +330,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team4-test2">Test 2:</label>
+                <label for="team4-overall">Overall:</label>
                 <select id="team4-test2" name="team4-test2" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -347,10 +341,8 @@
             </div>
 
             <div class="team-section">
-                <h3>Team 5</h3>
-                <label for="team5-name">Team Name:</label>
-                <input type="text" id="team5-name" name="team5-name"  required readonly>
-                <label for="team5-design">Design:</label>
+                <h3>AI NEW</h3>  <label for="team5-name">Team Name:</label>
+                <input type="text" id="team5-name" name="team5-name"  value="AI NEW" required readonly>  <label for="team5-design">Design:</label>
                 <select id="team5-design" name="team5-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -374,7 +366,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team5-test1">Test 1:</label>
+                <label for="team5-test1">Problem Solving:</label>
                 <select id="team5-test1" name="team5-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -382,7 +374,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team5-test2">Team 5 - Test 2:</label>
+                <label for="team5-overall">Overall:</label>
                 <select id="team5-test2" name="team5-test2" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -393,10 +385,8 @@
             </div>
 
             <div class="team-section">
-                <h3>Team 6</h3>
-                <label for="team6-name">Team Name:</label>
-                <input type="text" id="team6-name" name="team6-name"  required readonly>
-                <label for="team6-design">Design:</label>
+                <h3>TASK MANAGER</h3>  <label for="team6-name">Team Name:</label>
+                <input type="text" id="team6-name" name="team6-name"  value="TASK MANAGER" required readonly>  <label for="team6-design">Design:</label>
                 <select id="team6-design" name="team6-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -420,7 +410,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team6-test1">Test 1:</label>
+                <label for="team6-test1">Problem Solving:</label>
                 <select id="team6-test1" name="team6-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -428,7 +418,7 @@
                     <option value="2">2 Stars</option>
                     <option value="1">1 Star</option>
                 </select>
-                <label for="team6-test2">Team 6 - Test 2:</label>
+                <label for="team6-overall">Overall:</label>
                 <select id="team6-test2" name="team6-test2" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -456,38 +446,38 @@
                     "Design": formData.get("team1-design"),
                     "Presentation": formData.get("team1-presentation"),
                     "Critical Thinking": formData.get("team1-critical-thinking"),
-                    "Test 1": formData.get("team1-test1"),
-                    "Test 2": formData.get("team1-test2"),
+                    "Problem Solving": formData.get("team1-test1"),  
+                    "Overall": formData.get("team1-test2"), 
                     "Team Name 2": formData.get("team2-name"),
                     "Design 2": formData.get("team2-design"),
                     "Presentation 2": formData.get("team2-presentation"),
                     "Critical Thinking 2": formData.get("team2-critical-thinking"),
-                    "Test 1 Team 2": formData.get("team2-test1"),
-                    "Test 2 Team 2": formData.get("team2-test2"),
+                    "Problem Solving Team 2": formData.get("team2-test1"),  
+                    "Overall Team 2": formData.get("team2-test2"),  
                     "Team Name 3": formData.get("team3-name"),
                     "Design 3": formData.get("team3-design"),
                     "Presentation 3": formData.get("team3-presentation"),
                     "Critical Thinking 3": formData.get("team3-critical-thinking"),
-                    "Test 1 Team 3": formData.get("team3-test1"),
-                    "Test 2 Team 3": formData.get("team3-test2"),
+                    "Problem Solving Team 3": formData.get("team3-test1"),  
+                    "Overall Team 3": formData.get("team3-test2"),  
                     "Team Name 4": formData.get("team4-name"),
                     "Design 4": formData.get("team4-design"),
                     "Presentation 4": formData.get("team4-presentation"),
                     "Critical Thinking 4": formData.get("team4-critical-thinking"),
-                    "Test 1 Team 4": formData.get("team4-test1"),
-                    "Test 2 Team 4": formData.get("team4-test2"),
+                    "Problem Solving Team 4": formData.get("team4-test1"),  
+                    "Overall Team 4": formData.get("team4-test2"),  
                     "Team Name 5": formData.get("team5-name"),
                     "Design 5": formData.get("team5-design"),
                     "Presentation 5": formData.get("team5-presentation"),
                     "Critical Thinking 5": formData.get("team5-critical-thinking"),
-                    "Test 1 Team 5": formData.get("team5-test1"),
-                    "Test 2 Team 5": formData.get("team5-test2"),
+                    "Problem Solving Team 5": formData.get("team5-test1"),  
+                    "Overall Team 5": formData.get("team5-test2"),  
                     "Team Name 6": formData.get("team6-name"),
                     "Design 6": formData.get("team6-design"),
                     "Presentation 6": formData.get("team6-presentation"),
                     "Critical Thinking 6": formData.get("team6-critical-thinking"),
-                    "Test 1 Team 6": formData.get("team6-test1"),
-                    "Test 2 Team 6": formData.get("team6-test2"),
+                    "Problem Solving Team 6": formData.get("team6-test1"),  
+                    "Overall Team 6": formData.get("team6-test2"),  
                 }
             };
 
