--- a/hackathon.html
+++ b/hackathon.html
@@ -191,7 +191,7 @@
                     <option value="1">1 Star</option>
                 </select>
                 <label for="team1-problem-solving">Problem Solving:</label>
-                <select id="team1-problem-solving" name="team1-test1" required>
+                <select id="team1-test1" name="team1-test1" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
                     <option value="3">3 Stars</option>
@@ -209,8 +209,8 @@
             </div>
 
             <div class="team-section">
-                <h3>TUK TUK</h3>  <label for="team2-name">Team Name:</label>
-                <input type="text" id="team2-name" name="team2-name" value="TUK TUK" required readonly>  <label for="team2-design">Design:</label>
+                <h3>TUK TUK</h3><label for="team2-name">Team Name:</label>
+                <input type="text" id="team2-name" name="team2-name" value="TUK TUK" required readonly><label for="team2-design">Design:</label>
                 <select id="team2-design" name="team2-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -253,8 +253,8 @@
             </div>
 
             <div class="team-section">
-                <h3>RECIPE</h3>  <label for="team3-name">Team Name:</label>
-                <input type="text" id="team3-name" name="team3-name" value="RECIPE" required readonly>  <label for="team3-design">Design:</label>
+                <h3>RECIPE</h3><label for="team3-name">Team Name:</label>
+                <input type="text" id="team3-name" name="team3-name" value="RECIPE" required readonly><label for="team3-design">Design:</label>
                 <select id="team3-design" name="team3-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -297,8 +297,8 @@
             </div>
 
             <div class="team-section">
-                <h3>OP TICKET</h3>  <label for="team4-name">Team Name:</label>
-                <input type="text" id="team4-name" name="team4-name" value="OP TICKET" required readonly>  <label for="team4-design">Design:</label>
+                <h3>OP TICKET</h3><label for="team4-name">Team Name:</label>
+                <input type="text" id="team4-name" name="team4-name" value="OP TICKET" required readonly><label for="team4-design">Design:</label>
                 <select id="team4-design" name="team4-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -341,8 +341,8 @@
             </div>
 
             <div class="team-section">
-                <h3>AI NEW</h3>  <label for="team5-name">Team Name:</label>
-                <input type="text" id="team5-name" name="team5-name"  value="AI NEW" required readonly>  <label for="team5-design">Design:</label>
+                <h3>AI NEW</h3><label for="team5-name">Team Name:</label>
+                <input type="text" id="team5-name" name="team5-name"  value="AI NEW" required readonly><label for="team5-design">Design:</label>
                 <select id="team5-design" name="team5-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -385,8 +385,8 @@
             </div>
 
             <div class="team-section">
-                <h3>TASK MANAGER</h3>  <label for="team6-name">Team Name:</label>
-                <input type="text" id="team6-name" name="team6-name"  value="TASK MANAGER" required readonly>  <label for="team6-design">Design:</label>
+                <h3>TASK MANAGER</h3><label for="team6-name">Team Name:</label>
+                <input type="text" id="team6-name" name="team6-name"  value="TASK MANAGER" required readonly><label for="team6-design">Design:</label>
                 <select id="team6-design" name="team6-design" required>
                     <option value="5">5 Stars</option>
                     <option value="4">4 Stars</option>
@@ -443,45 +443,45 @@
             const data = {
                 fields: {
                     "Team Name": formData.get("team1-name"),
-                    "Design": formData.get("team1-design"),
-                    "Presentation": formData.get("team1-presentation"),
-                    "Critical Thinking": formData.get("team1-critical-thinking"),
-                    "Problem Solving": formData.get("team1-test1"),
-                    "Overall": formData.get("team1-test2"),
+                    "Design": parseInt(formData.get("team1-design")),  //  <--- PARSE INT
+                    "Presentation": parseInt(formData.get("team1-presentation")),  //  <--- PARSE INT
+                    "Critical Thinking": parseInt(formData.get("team1-critical-thinking")),  //  <--- PARSE INT
+                    "Problem Solving": parseInt(formData.get("team1-test1")),  //  <--- PARSE INT
+                    "Overall": parseInt(formData.get("team1-test2")),  //  <--- PARSE INT
                     "Team Name 2": formData.get("team2-name"),
-                    "Design 2": formData.get("team2-design"),
-                    "Presentation 2": formData.get("team2-presentation"),
-                    "Critical Thinking 2": formData.get("team2-critical-thinking"),
-                    "Problem Solving Team 2": formData.get("team2-test1"),
-                    "Overall Team 2": formData.get("team2-test2"),
+                    "Design 2":  parseInt(formData.get("team2-design")),  //  <--- PARSE INT
+                    "Presentation 2":  parseInt(formData.get("team2-presentation")),  //  <--- PARSE INT
+                    "Critical Thinking 2":  parseInt(formData.get("team2-critical-thinking")),  //  <--- PARSE INT
+                    "Problem Solving Team 2":  parseInt(formData.get("team2-test1")),  //  <--- PARSE INT
+                    "Overall Team 2":  parseInt(formData.get("team2-test2")),  //  <--- PARSE INT
                     "Team Name 3": formData.get("team3-name"),
-                    "Design 3": formData.get("team3-design"),
-                    "Presentation 3": formData.get("team3-presentation"),
-                    "Critical Thinking 3": formData.get("team3-critical-thinking"),
-                    "Problem Solving Team 3": formData.get("team3-test1"),
-                    "Overall Team 3": formData.get("team3-test2"),
+                    "Design 3":  parseInt(formData.get("team3-design")),  //  <--- PARSE INT
+                    "Presentation 3":  parseInt(formData.get("team3-presentation")),  //  <--- PARSE INT
+                    "Critical Thinking 3":  parseInt(formData.get("team3-critical-thinking")),  //  <--- PARSE INT
+                    "Problem Solving Team 3":  parseInt(formData.get("team3-test1")),  //  <--- PARSE INT
+                    "Overall Team 3":  parseInt(formData.get("team3-test2")),  //  <--- PARSE INT
                     "Team Name 4": formData.get("team4-name"),
-                    "Design 4": formData.get("team4-design"),
-                    "Presentation 4": formData.get("team4-presentation"),
-                    "Critical Thinking 4": formData.get("team4-critical-thinking"),
-                    "Problem Solving Team 4": formData.get("team4-test1"),
-                    "Overall Team 4": formData.get("team4-test2"),
+                    "Design 4":  parseInt(formData.get("team4-design")),  //  <--- PARSE INT
+                    "Presentation 4":  parseInt(formData.get("team4-presentation")),  //  <--- PARSE INT
+                    "Critical Thinking 4":  parseInt(formData.get("team4-critical-thinking")),  //  <--- PARSE INT
+                    "Problem Solving Team 4":  parseInt(formData.get("team4-test1")),  //  <--- PARSE INT
+                    "Overall Team 4":  parseInt(formData.get("team4-test2")),  //  <--- PARSE INT
                     "Team Name 5": formData.get("team5-name"),
-                    "Design 5": formData.get("team5-design"),
-                    "Presentation 5": formData.get("team5-presentation"),
-                    "Critical Thinking 5": formData.get("team5-critical-thinking"),
-                    "Problem Solving Team 5": formData.get("team5-test1"),
-                    "Overall Team 5": formData.get("team5-test2"),
+                    "Design 5":  parseInt(formData.get("team5-design")),  //  <--- PARSE INT
+                    "Presentation 5":  parseInt(formData.get("team5-presentation")),  //  <--- PARSE INT
+                    "Critical Thinking 5":  parseInt(formData.get("team5-critical-thinking")),  //  <--- PARSE INT
+                    "Problem Solving Team 5":  parseInt(formData.get("team5-test1")),  //  <--- PARSE INT
+                    "Overall Team 5":  parseInt(formData.get("team5-test2")),  //  <--- PARSE INT
                     "Team Name 6": formData.get("team6-name"),
-                    "Design 6": formData.get("team6-design"),
-                    "Presentation 6": formData.get("team6-presentation"),
-                    "Critical Thinking 6": formData.get("team6-critical-thinking"),
-                    "Problem Solving Team 6": formData.get("team6-test1"),
-                    "Overall Team 6": formData.get("team6-test2"),
+                    "Design 6":  parseInt(formData.get("team6-design")),  //  <--- PARSE INT
+                    "Presentation 6":  parseInt(formData.get("team6-presentation")),  //  <--- PARSE INT
+                    "Critical Thinking 6":  parseInt(formData.get("team6-critical-thinking")),  //  <--- PARSE INT
+                    "Problem Solving Team 6":  parseInt(formData.get("team6-test1")),  //  <--- PARSE INT
+                    "Overall Team 6":  parseInt(formData.get("team6-test2")),  //  <--- PARSE INT
                 }
             };
 
-            //  Replace with your actual Airtable URL.  
+            //  Replace with your actual Airtable URL.
             //  It should look like:  https://api.airtable.com/v0/YOUR_BASE_ID/YOUR_TABLE_NAME
             const API_URL = "https://api.airtable.com/v0/apphIRpiGiAxAqmOZ/tbln7Iqb2hq4JkEd9/";  //  <---------------------- CORRECTED LINE
 
