--- a/hackathon.html
+++ b/hackathon.html
@@ -443,50 +443,48 @@
             const data = {
                 fields: {
                     "Team Name": formData.get("team1-name"),
-                    "Design": parseInt(formData.get("team1-design")),  //  <--- PARSE INT
-                    "Presentation": parseInt(formData.get("team1-presentation")),  //  <--- PARSE INT
-                    "Critical Thinking": parseInt(formData.get("team1-critical-thinking")),  //  <--- PARSE INT
-                    "Problem Solving": parseInt(formData.get("team1-test1")),  //  <--- PARSE INT
-                    "Overall": parseInt(formData.get("team1-test2")),  //  <--- PARSE INT
+                    "Design": parseInt(formData.get("team1-design")),
+                    "Presentation": parseInt(formData.get("team1-presentation")),
+                    "Critical Thinking": parseInt(formData.get("team1-critical-thinking")),
+                    "Problem Solving": parseInt(formData.get("team1-test1")),
+                    "Overall": parseInt(formData.get("team1-test2")),
                     "Team Name 2": formData.get("team2-name"),
-                    "Design 2":  parseInt(formData.get("team2-design")),  //  <--- PARSE INT
-                    "Presentation 2":  parseInt(formData.get("team2-presentation")),  //  <--- PARSE INT
-                    "Critical Thinking 2":  parseInt(formData.get("team2-critical-thinking")),  //  <--- PARSE INT
-                    "Problem Solving Team 2":  parseInt(formData.get("team2-test1")),  //  <--- PARSE INT
-                    "Overall Team 2":  parseInt(formData.get("team2-test2")),  //  <--- PARSE INT
+                    "Design 2":  parseInt(formData.get("team2-design")),
+                    "Presentation 2":  parseInt(formData.get("team2-presentation")),
+                    "Critical Thinking 2":  parseInt(formData.get("team2-critical-thinking")),
+                    "Problem Solving Team 2":  parseInt(formData.get("team2-test1")),
+                    "Overall Team 2":  parseInt(formData.get("team2-test2")),
                     "Team Name 3": formData.get("team3-name"),
-                    "Design 3":  parseInt(formData.get("team3-design")),  //  <--- PARSE INT
-                    "Presentation 3":  parseInt(formData.get("team3-presentation")),  //  <--- PARSE INT
-                    "Critical Thinking 3":  parseInt(formData.get("team3-critical-thinking")),  //  <--- PARSE INT
-                    "Problem Solving Team 3":  parseInt(formData.get("team3-test1")),  //  <--- PARSE INT
-                    "Overall Team 3":  parseInt(formData.get("team3-test2")),  //  <--- PARSE INT
+                    "Design 3":  parseInt(formData.get("team3-design")),
+                    "Presentation 3":  parseInt(formData.get("team3-presentation")),
+                    "Critical Thinking 3":  parseInt(formData.get("team3-critical-thinking")),
+                    "Problem Solving Team 3":  parseInt(formData.get("team3-test1")),
+                    "Overall Team 3":  parseInt(formData.get("team3-test2")),
                     "Team Name 4": formData.get("team4-name"),
-                    "Design 4":  parseInt(formData.get("team4-design")),  //  <--- PARSE INT
-                    "Presentation 4":  parseInt(formData.get("team4-presentation")),  //  <--- PARSE INT
-                    "Critical Thinking 4":  parseInt(formData.get("team4-critical-thinking")),  //  <--- PARSE INT
-                    "Problem Solving Team 4":  parseInt(formData.get("team4-test1")),  //  <--- PARSE INT
-                    "Overall Team 4":  parseInt(formData.get("team4-test2")),  //  <--- PARSE INT
+                    "Design 4":  parseInt(formData.get("team4-design")),
+                    "Presentation 4":  parseInt(formData.get("team4-presentation")),
+                    "Critical Thinking 4":  parseInt(formData.get("team4-critical-thinking")),
+                    "Problem Solving Team 4":  parseInt(formData.get("team4-test1")),
+                    "Overall Team 4":  parseInt(formData.get("team4-test2")),
                     "Team Name 5": formData.get("team5-name"),
-                    "Design 5":  parseInt(formData.get("team5-design")),  //  <--- PARSE INT
-                    "Presentation 5":  parseInt(formData.get("team5-presentation")),  //  <--- PARSE INT
-                    "Critical Thinking 5":  parseInt(formData.get("team5-critical-thinking")),  //  <--- PARSE INT
-                    "Problem Solving Team 5":  parseInt(formData.get("team5-test1")),  //  <--- PARSE INT
-                    "Overall Team 5":  parseInt(formData.get("team5-test2")),  //  <--- PARSE INT
+                    "Design 5":  parseInt(formData.get("team5-design")),
+                    "Presentation 5":  parseInt(formData.get("team5-presentation")),
+                    "Critical Thinking 5":  parseInt(formData.get("team5-critical-thinking")),
+                    "Problem Solving Team 5":  parseInt(formData.get("team5-test1")),
+                    "Overall Team 5":  parseInt(formData.get("team5-test2")),
                     "Team Name 6": formData.get("team6-name"),
-                    "Design 6":  parseInt(formData.get("team6-design")),  //  <--- PARSE INT
-                    "Presentation 6":  parseInt(formData.get("team6-presentation")),  //  <--- PARSE INT
-                    "Critical Thinking 6":  parseInt(formData.get("team6-critical-thinking")),  //  <--- PARSE INT
-                    "Problem Solving Team 6":  parseInt(formData.get("team6-test1")),  //  <--- PARSE INT
-                    "Overall Team 6":  parseInt(formData.get("team6-test2")),  //  <--- PARSE INT
+                    "Design 6":  parseInt(formData.get("team6-design")),
+                    "Presentation 6":  parseInt(formData.get("team6-presentation")),
+                    "Critical Thinking 6":  parseInt(formData.get("team6-critical-thinking")),
+                    "Problem Solving Team 6":  parseInt(formData.get("team6-test1")),
+                    "Overall Team 6":  parseInt(formData.get("team6-test2")),
                 }
             };
 
             //  Replace with your actual Airtable URL.
             //  It should look like:  https://api.airtable.com/v0/YOUR_BASE_ID/YOUR_TABLE_NAME
-            const API_URL = "https://api.airtable.com/v0/apphIRpiGiAxAqmOZ/tbln7Iqb2hq4JkEd9/";  //  <---------------------- CORRECTED LINE
-
-            //  Replace with your actual Airtable API key.  It looks like: keyXXXXXXXXXXXXXXXXXXXX
-            const API_KEY = "pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0"; // <---------------------- REPLACE THIS LINE
+            const API_URL = "https://api.airtable.com/v0/apphIRpiGiAxAqmOZ/tbln7Iqb2hq4JkEd9/";
+            const API_KEY = "pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0";
 
             const response = await fetch(API_URL, {
                 method: "POST",
