--- a/hackathon.html
+++ b/hackathon.html
@@ -207,6 +207,236 @@
                         <option value="1">1 Star</option>
                     </select>
                 </div>
+
+                <div class="team-section">
+                    <h3>TUK TUK</h3>
+                    <label for="team2-name">Team Name:</label>
+                    <input type="text" id="team2-name" name="Team Name" value="TUK TUK" required readonly>
+                    <label for="team2-design">Design:</label>
+                    <select id="team2-design" name="Design" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team2-presentation">Presentation:</label>
+                    <select id="team2-presentation" name="Presentation" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team2-critical-thinking">Critical Thinking:</label>
+                    <select id="team2-critical-thinking" name="Critical Thinking" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team2-problem-solving">Problem Solving:</label>
+                    <select id="team2-test1" name="Problem Solving" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team2-overall">Overall:</label>
+                    <select id="team2-test2" name="Overall" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                </div>
+
+                <div class="team-section">
+                    <h3>RECIPE</h3>
+                    <label for="team3-name">Team Name:</label>
+                    <input type="text" id="team3-name" name="Team Name" value="RECIPE" required readonly>
+                    <label for="team3-design">Design:</label>
+                    <select id="team3-design" name="Design" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team3-presentation">Presentation:</label>
+                    <select id="team3-presentation" name="Presentation" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team3-critical-thinking">Critical Thinking:</label>
+                    <select id="team3-critical-thinking" name="Critical Thinking" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team3-problem-solving">Problem Solving:</label>
+                    <select id="team3-test1" name="Problem Solving" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team3-overall">Overall:</label>
+                    <select id="team3-test2" name="Overall" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                </div>
+
+                <div class="team-section">
+                    <h3>OP TICKET</h3>
+                    <label for="team4-name">Team Name:</label>
+                    <input type="text" id="team4-name" name="Team Name" value="OP TICKET" required readonly>
+                    <label for="team4-design">Design:</label>
+                    <select id="team4-design" name="Design" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team4-presentation">Presentation:</label>
+                    <select id="team4-presentation" name="Presentation" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team4-critical-thinking">Critical Thinking:</label>
+                    <select id="team4-critical-thinking" name="Critical Thinking" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team4-problem-solving">Problem Solving:</label>
+                    <select id="team4-test1" name="Problem Solving" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team4-overall">Overall:</label>
+                    <select id="team4-test2" name="Overall" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                </div>
+
+                <div class="team-section">
+                    <h3>AI NEW</h3>
+                    <label for="team5-name">Team Name:</label>
+                    <input type="text" id="team5-name" name="Team Name" value="AI NEW" required readonly>
+                    <label for="team5-design">Design:</label>
+                    <select id="team5-design" name="Design" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team5-presentation">Presentation:</label>
+                    <select id="team5-presentation" name="Presentation" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team5-critical-thinking">Critical Thinking:</label>
+                    <select id="team5-critical-thinking" name="Critical Thinking" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team5-problem-solving">Problem Solving:</label>
+                    <select id="team5-test1" name="Problem Solving" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team5-overall">Overall:</label>
+                    <select id="team5-test2" name="Overall" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                </div>
+
+                <div class="team-section">
+                    <h3>TASK MANAGER</h3>
+                    <label for="team6-name">Team Name:</label>
+                    <input type="text" id="team6-name" name="Team Name" value="TASK MANAGER" required readonly>
+                    <label for="team6-design">Design:</label>
+                    <select id="team6-design" name="Design" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team6-presentation">Presentation:</label>
+                    <select id="team6-presentation" name="Presentation" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team6-critical-thinking">Critical Thinking:</label>
+                    <select id="team6-critical-thinking" name="Critical Thinking" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team6-problem-solving">Problem Solving:</label>
+                    <select id="team6-test1" name="Problem Solving" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                    <label for="team6-overall">Overall:</label>
+                    <select id="team6-test2" name="Overall" required>
+                        <option value="5">5 Stars</option>
+                        <option value="4">4 Stars</option>
+                        <option value="3">3 Stars</option>
+                        <option value="2">2 Stars</option>
+                        <option value="1">1 Star</option>
+                    </select>
+                </div>
             </div>
             <button type="submit">Submit Review</button>
         </form>
