--- a/reviews.html
+++ b/reviews.html
@@ -130,7 +130,8 @@
                 <li><a href="#">Forums</a></li>
                 <li><a href="#">Resources</a></li>
                 <li><a href="#">Members</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="result.html">Results</a></li>
             </ul>
         </nav>
     </header>
