--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@
             return /^\d{2}$/.test(rollNumber);
         }
 
-        signupForm.addEventListener('submit', (event) => {
+        signupForm.addEventListener('submit', (event) => { // Corrected event name
             event.preventDefault();
             let isNameValid = true;
             let isRollNumberValid = true;
