--- a/signup.html
+++ b/signup.html
@@ -49,7 +49,8 @@
         const passwordError = document.getElementById('password-error');
 
         // Airtable API Configuration
-        const AIRTABLE_API_KEY = 'pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0';  // Replace with your actual API key
+        const AIRTABLE_API_KEY = "pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0";
+  // Replace with your actual API key
         const AIRTABLE_BASE_ID = 'apphIRpiGiAxAqmOZ'; // Replace with your actual base ID
         const AIRTABLE_TABLE_NAME = 'login';           // Replace with your actual table name
 
@@ -57,7 +58,7 @@
             return /^\d{2}$/.test(rollNumber);
         }
 
-        signupForm.addEventListener('submit', (event) => { // Corrected event name
+        signupForm.addEventListener('submit', (event) => {
             event.preventDefault();
             let isNameValid = true;
             let isRollNumberValid = true;
