--- a/signup.html
+++ b/signup.html
@@ -49,10 +49,9 @@
         const passwordError = document.getElementById('password-error');
 
         // Airtable API Configuration
-        const AIRTABLE_API_KEY = "pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0";
-  // Replace with your actual API key
-        const AIRTABLE_BASE_ID = 'apphIRpiGiAxAqmOZ'; // Replace with your actual base ID
-        const AIRTABLE_TABLE_NAME = 'login';           // Replace with your actual table name
+        const AIRTABLE_API_KEY = 'pat3J8WCAlrvGtr4v.391d125d9524830647f571af8b0d74d892f53e70e6da50c4292a4abe8cc079e0';  // Replace with your actual API key
+        const AIRTABLE_BASE_ID = 'appWMD6TIbwIoGN7b'; // Replace with your actual base ID
+        const AIRTABLE_TABLE_NAME = 'tblXUAhGKSLo83AZz';           // Replace with your actual table name
 
         function validateRollNumber(rollNumber) {
             return /^\d{2}$/.test(rollNumber);
